0.5.0
 - Implemented ThreadStorm#clear_finished.
 - Implemented the :execute_blocks option.
 
0.4.0
 - Renamed to thread_storm... ugh.
 - Simplified the shutdown process by using my own thread safe queue.
 - Removed timing based tests.
 - Much more efficient ThreadStorm#join.
 - Added Execution#join.
 - Configurable Timeout implementation.

0.3.0
 - PoolParty#new now takes an optional block.
 
0.2.0
 - Renamed to pool_party.
 - Fixed PoolParty#shutdown for real.

0.1.1
  - Fixed ThreadPool#shutdown.

0.1.0
 - Initial version