@@ -1,53 +1,36 @@
-require "thread"
+require "monitor"
 
 class ThreadStorm
   class Queue #:nodoc:
+    attr_reader :lock, :cond
     
-    def initialize
-      @lock     = Mutex.new
-      @deq_cond = ConditionVariable.new
-      @enq_cond = ConditionVariable.new
-      @queue    = []
+    def initialize(size)
+      @size   = size
+      @lock   = Monitor.new
+      @cond   = @lock.new_cond
+      @queue  = []
     end
     
     def enq(value)
-      @queue.push(value)
+      @lock.synchronize do
+        @queue.push(value)
+        @cond.signal
+      end
     end
     
     def deq
-      @queue.pop
+      @lock.synchronize do
+        @cond.wait_while{ @queue.empty? }
+        @queue.pop
+      end
     end
     
-    def empty?
-      @queue.empty?
-    end
-    
-    def synchronize(&block)
-      @lock.synchronize{ block.call(self) }
-    end
-    
-    def wait_on_deq
-      @deq_cond.wait(@lock)
-    end
-    
-    def wait_on_enq
-      @enq_cond.wait(@lock)
-    end
-    
-    def signal_deq
-      @deq_cond.signal
-    end
-    
-    def signal_enq
-      @enq_cond.signal
-    end
-    
-    def broadcast_deq
-      @deq_cond.broadcast
-    end
-    
-    def broadcast_enq
-      @enq_cond.broadcast
+    def shutdown
+      @lock.synchronize do
+        @queue.clear
+        @size.times{ @queue.push(nil) }
+        @cond.broadcast
+      end
     end
     
   end
