@@ -5,11 +5,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{thread_storm}
-  s.version = "0.4.0"
+  s.version = "0.5.0"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Christopher J. Bottaro"]
-  s.date = %q{2010-06-07}
+  s.date = %q{2010-06-14}
   s.description = %q{Simple thread pool with timeouts, default values, error handling, state tracking and unit tests.}
   s.email = %q{cjbottaro@alumni.cs.utexas.edu}
   s.extra_rdoc_files = [
@@ -28,6 +28,7 @@ Gem::Specification.new do |s|
      "lib/thread_storm/active_support.rb",
      "lib/thread_storm/execution.rb",
      "lib/thread_storm/queue.rb",
+     "lib/thread_storm/semaphore.rb",
      "lib/thread_storm/worker.rb",
      "test/helper.rb",
      "test/test_thread_storm.rb",
